# InfraDbToArangoDb

./: .gitignore  ArangoDBConnectionFactory.py  CreateDBStep.py  CreateIndicesStep.py  DBPipelineController.py  Enums.py  ExtraFillStep.py  GenericDbFunctions.py  InitialFillStep.py  README.md  arangolooprunner.py  bench_fill_assets.py  diagram.drawio  main_generate_diagram.py  main_linux_arango.py  main_windows_arango.py  pyproject.toml  pytest.ini  requirements.txt  settings_sample.json  test.py  transaction example.py
API/: APIEnums.py  AbstractRequester.py  CertRequester.py  CookieRequester.py  EMInfraClient.py  EMInfraDomain.py  EMSONClient.py  JWTRequester.py  RequesterFactory.py
Analysis/: README_aql_to_excel.md  README_keuringsinfo.md  README_lsb_keuring_details.md  __init__.py  aanpak.md  aql_to_excel.py  debug_export.py  debug_pivot_counts.py  example_aql_to_excel_query.aql  export_keuringsinfo.py  export_lsb_keuring_details.py  keuringsinfo_export.md  list_lsdeel_toezicht.py  main_aql_to_excel.py  main_export_keuringsinfo.py  main_export_lsb_keuring_details.py  spec.md  steps.md  test_export_keuringsinfo_pivot.py  test_keuringsinfo_aql.py
Analysis/Merging/: README.md  _merge_logic.py  main_01_toevoegen_locatie_klassen.py  main_02_toevoegen_inbreuken.py  run_me_for_dev.py  run_me_for_dev_02.py
Analysis/TreeAnalysis/: README.md  goal.md  run_tree_analysis.py  (+2 more)
tests/: test_asset_transform.py  test_bench_transform_keys.py  test_integration_assets_namespace_normalization.py  test_time_window.py
utils/: date_helpers.py  query_dto_helpers.py  time_window.py
(+2 files in other folders)
